fix: dc-path table overflow behavior

--- a/src/less/components/editors.less
+++ b/src/less/components/editors.less
@@ -130,5 +130,29 @@
 }
 
 .table-wrapper {
-  width: 100%;
+  padding: 5px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.bp5-table-quadrant-scroll-container {
+  &::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(172, 172, 172, 0.6);
+
+    .bp5-dark & {
+      background-color: rgba(172, 172, 172, 0.4);
+    }
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
 }
